# receipts-api-mcp

./: .gitignore  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  render.yaml
--help/.github/instructions/: global-skills.instructions.md
--mode=check/.githooks/: pre-commit
--mode=check/.github/instructions/: skill-routing.instructions.md
--mode=check/.github/workflows/: global-governance-presence.yml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  task.yml
.github/instructions/: openclaw-universal.instructions.md
.github/scripts/: check-global-governance.sh
.github/workflows/: ci.yml  deploy-pages.yml
assets/interview/: README.md  Sr AI Engineer - Technical Interview.pptx
assets/interview/instructions/: Load the data into the API Server.
docs/: index.html
docs/data/: receipts_2025_01.csv  receipts_2025_02.csv
src/receipts_api/: __init__.py  data_loader.py  main.py  utils.py
src/receipts_api/routers/: __init__.py  receipts.py  stats.py
tests/: test_api.py
