[project]
name = "receipts-api"
version = "1.0.0"
description = "FastAPI receipts statistics server with MCP layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastapi-mcp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pip-audit>=2.10.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
receipts-api = "receipts_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipts_api"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
